# objectbox-c

./: CMakeLists.txt
cmake/: libraries.cmake  objectbox-sync.cmake  objectbox.cmake
examples/c-cursor-no-gen/: CMakeLists.txt
examples/c-gen/: CMakeLists.txt
examples/cpp-gen/: CMakeLists.txt
examples/cpp-gen-sync/: CMakeLists.txt
src-test/: CMakeLists.txt
src-test-gen/: CMakeLists.txt
